
= choose_workflo Changelog

== Unreleased

=== Added

* 

=== Changed

* 

=== Removed

* 

== [2.0] - 2020-07-06

=== Added

* allows selecting a single digit without typing preceeding zero

=== Changed

* jars, configs, jre offered in alphabetical order

== [1.0] - 2020-07-04

=== Added

* scanner input for choosing folders
* eclipse public license















