@@ -4,5 +4,5 @@ choose_workflo
 Copyright Nicholas Prado, begun 2020, released under terms of Eclipse Public license v2.0 or later, as reproduced in eclipse-v2.0.txt in this repository, and as contemporarily accessible at https://www.eclipse.org/legal/epl-2.0/ . The Eclipse Public license is copyright the Eclipse Foundation.
 
 choose_workflo relies on  
-* _, which is copyright _ released under _ license terms.
+* Enohar, which is copyright Nicholas Prado released under MIT v1.0 license terms.
 
