@@ -3,7 +3,7 @@
 
 		title : Unable to configure jre
 
-		status : to do
+		status : done
 
 		priority : high
 
