@@ -1,0 +1,44 @@
+
+# issue 200706_2013
+
+	
+		title : Options are not in alphabetical order
+
+		status : done
+
+		priority : high
+
+		assignee : Nicholas
+
+		-- desc
+		Menu choices appear in lexical order, ie 0 1 11 12 2 3, rather than numeric order. Ensure they appear in expected order without requiring extra input for 0-9. Which is to say, if depicted as 09, only require typing 9.
+
+		That's annoying, but allowing the values to appear out of alphabetical order is actually unhelpful. Ensure they are. 
+		-- desc
+
+	>## yyMMdd hhMM zzz
+		>comment author : 
+		>-- comment
+
+		>-- comment
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
