@@ -1,0 +1,7 @@
+/** see ../../../../../LICENSE for release details */
+/**  */
+module com.beyondrelations.runtime.cwf
+{
+	exports com.beyondrelations.runtime.cwf;
+}
+
